# pigment

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  build.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  release.yml
examples/: ansi.rs  anstyle_integration.rs  basic.rs  color_rs_integration.rs  colored_integration.rs  crossterm_integration.rs  list_colors.rs  nu_ansi_term_integration.rs  owo_integration.rs  palette_integration.rs  ratatui_integration.rs  rgb_integration.rs  termcolor_integration.rs  yansi_integration.rs
src/: ansi.rs  color.rs  lib.rs
tests/: color_tests.rs  integration_tests.rs
tools/: scrape.py
