[package]
name = "pigment"
version = "0.1.3"
edition = "2024"
description = "All the colors of the web, by name – case-/space-/snake-insensitive"
authors = ["Brayden Moon <crazywolf132@gmail.com>"]
license = "MIT"
repository = "https://github.com/crazywolf132/pigment"
documentation = "https://docs.rs/pigment"
readme = "README.md"
keywords = ["color", "rgb", "hex", "ansi", "terminal"]
categories = ["graphics", "visualization"]
exclude = [".gitignore", "build.sh"]

[dependencies]
phf = { version = "0.11", features = ["macros"] }
# optional integrations
owo-colors = { version = "4", optional = true }
termcolor = { version = "1.2", optional = true }
colored = { version = "3", optional = true }
anstyle = { version = "1.0", optional = true }
nu-ansi-term = { version = "0.50", optional = true }
yansi = { version = "1.0", optional = true }
crossterm = { version = "0.29", optional = true }
ratatui = { version = "0.29.0", optional = true }
palette = { version = "0.7.6", optional = true }
rgb = { version = "0.8.37", optional = true }
color = { version = "0.3.0", optional = true }

[build-dependencies]
which = "7.0.3"

[dev-dependencies]

[features]
default = []
owo = ["dep:owo-colors"]
termcolor = ["dep:termcolor"]
colored = ["dep:colored"]
anstyle = ["dep:anstyle"]
nu-ansi-term = ["dep:nu-ansi-term"]
yansi = ["dep:yansi"]
crossterm = ["dep:crossterm"]
ratatui = ["dep:ratatui"]
palette = ["dep:palette"]
rgb = ["dep:rgb"]
color-rs = ["dep:color"]
